# tekniker_telepresence

./: AUTHORS  CMakeLists.txt  README  mainpage.dox  manifest.xml  telepresenceApp.fbp  ui.cpp
include/tekniker_telepresence/: camview.h  ui.h  worker.h
launch/: tekniker_telepresence.launch
src/: Main.cpp  camview.cpp  depth_server.cpp  image_resizer.cpp  listener.cpp  ui.cpp  worker.cpp
srv/: depth_server.srv
